--- a/mikiyas.html
+++ b/mikiyas.html
@@ -9,33 +9,153 @@
         <div class="wrapper">
             <ul class="carousel">
                 <li class="card">
-                    <div class="img"><img src="images/Squad1H-Nikiyas.JPG" alt="img"></div>
-                    <h2>Mikiyas Hadis</h2>
+                    <div class="img"><img src="images/Squad1H-Nikiyas ruimte.png" alt="img"></div>
+                    <h2>Mikiyas</h2>
                     <span>Student Front-end development</span>
                 </li>
                 <li class="card">
-                    <div class="img"><img src="images/Squad1H-Nikiyas.JPG" alt="img"></div>
-                    <h2>Mikiyas Hadis</h2>
+                    <div class="img"><img src="images/Squad1H-anouar ruimte.png" alt="img"></div>
+                    <h2>Anouar</h2>
                     <span>Student Front-end development</span>
                 </li>
                 <li class="card">
-                    <div class="img"><img src="images/Squad1H-Nikiyas.JPG" alt="img"></div>
-                    <h2>Mikiyas Hadis</h2>
+                    <div class="img"><img src="images/Squad1H-anouk ruimte.png" alt="img"></div>
+                    <h2>Anouk</h2>
                     <span>Student Front-end development</span>
                 </li>
                 <li class="card">
-                    <div class="img"><img src="images/Squad1H-Nikiyas.JPG" alt="img"></div>
-                    <h2>Mikiyas Hadis</h2>
+                    <div class="img"><img src="images/Squad1H-Aria ruimte.png" alt="img"></div>
+                    <h2>Aria</h2>
                     <span>Student Front-end development</span>
                 </li>
                 <li class="card">
-                    <div class="img"><img src="images/Squad1H-Nikiyas.JPG" alt="img"></div>
-                    <h2>Mikiyas Hadis</h2>
+                    <div class="img"><img src="images/Squad1H-arman ruimte.png" alt="img"></div>
+                    <h2>Arman</h2>
                     <span>Student Front-end development</span>
                 </li>
                                 <li class="card">
-                    <div class="img"><img src="images/Squad1H-Nikiyas.JPG" alt="img"></div>
-                    <h2>Mikiyas Hadis</h2>
+                    <div class="img"><img src="images/Squad1H-daan ruimte.png" alt="img"></div>
+                    <h2>Daan</h2>
+                    <span>Student Front-end development</span>
+                </li>
+                <li class="card">
+                    <div class="img"><img src="images/Squad1H-finn ruimte.png" alt="img"></div>
+                    <h2>Finn</h2>
+                    <span>Student Front-end development</span>
+                </li>
+                <li class="card">
+                    <div class="img"><img src="images/Squad1H-kai ruimte.png" alt="img"></div>
+                    <h2>Kai</h2>
+                    <span>Student Front-end development</span>
+                </li>
+                <li class="card">
+                    <div class="img"><img src="images/Squad1H-kate ruimte.png" alt="img"></div>
+                    <h2>Kate</h2>
+                    <span>Student Front-end development</span>
+                </li>
+                <li class="card">
+                    <div class="img"><img src="images/Squad1H-kerem ruimte.png" alt="img"></div>
+                    <h2>Kerem</h2>
+                    <span>Student Front-end development</span>
+                </li>
+                <li class="card">
+                    <div class="img"><img src="images/Squad1H-kyan ruimte.jpg" alt="img"></div>
+                    <h2>Kyan</h2>
+                    <span>Student Front-end development</span>
+                </li>
+                <li class="card">
+                    <div class="img"><img src="images/Squad1H-luuk ruimte.png" alt="img"></div>
+                    <h2>Luuk</h2>
+                    <span>Student Front-end development</span>
+                </li>
+                <li class="card">
+                    <div class="img"><img src="images/Squad1H-marije ruimte.png" alt="img"></div>
+                    <h2>Marije</h2>
+                    <span>Student Front-end development</span>
+                </li>
+                <li class="card">
+                    <div class="img"><img src="images/Squad1H-miel ruimte.jpg" alt="img"></div>
+                    <h2>Miel</h2>
+                    <span>Student Front-end development</span>
+                </li>
+                <li class="card">
+                    <div class="img"><img src="images/Squad1H-nawal ruimte.png" alt="img"></div>
+                    <h2>Nawal</h2>
+                    <span>Student Front-end development</span>
+                </li>
+                <li class="card">
+                    <div class="img"><img src="images/Squad1H-Nayome ruimte.png" alt="img"></div>
+                    <h2>Nayome</h2>
+                    <span>Student Front-end development</span>
+                </li>
+                <li class="card">
+                    <div class="img"><img src="images/Squad1H-rapha ruimte.png" alt="img"></div>
+                    <h2>Rapha</h2>
+                    <span>Student Front-end development</span>
+                </li>
+                <li class="card">
+                    <div class="img"><img src="images/Squad1H-renzo ruimte.png" alt="img"></div>
+                    <h2>Renzo</h2>
+                    <span>Student Front-end development</span>
+                </li>
+                <li class="card">
+                    <div class="img"><img src="images/Squad1H-reyhan ruimte.png" alt="img"></div>
+                    <h2>Reyhan</h2>
+                    <span>Student Front-end development</span>
+                </li>
+                <li class="card">
+                    <div class="img"><img src="images/Squad1H-rick ruimte.png" alt="img"></div>
+                    <h2>Rick</h2>
+                    <span>Student Front-end development</span>
+                </li>
+                <li class="card">
+                    <div class="img"><img src="images/Squad1H-riley ruimte.png" alt="img"></div>
+                    <h2>Riley</h2>
+                    <span>Student Front-end development</span>
+                </li>
+                <li class="card">
+                    <div class="img"><img src="images/Squad1H-safoe ruimte.png" alt="img"></div>
+                    <h2>Safoe</h2>
+                    <span>Student Front-end development</span>
+                </li>
+                <li class="card">
+                    <div class="img"><img src="images/Squad1H-sebastiaan ruimte.png" alt="img"></div>
+                    <h2>Sebastiaan</h2>
+                    <span>Student Front-end development</span>
+                </li>
+                <li class="card">
+                    <div class="img"><img src="images/Squad1H-senne ruimte.jpg" alt="img"></div>
+                    <h2>Senne</h2>
+                    <span>Student Front-end development</span>
+                </li>
+                <li class="card">
+                    <div class="img"><img src="images/Squad1H-sidney ruimte.png" alt="img"></div>
+                    <h2>Sidney</h2>
+                    <span>Student Front-end development</span>
+                </li>
+                <li class="card">
+                    <div class="img"><img src="images/Squad1H-sjors ruimte.png" alt="img"></div>
+                    <h2>Sjors</h2>
+                    <span>Student Front-end development</span>
+                </li>
+                <li class="card">
+                    <div class="img"><img src="images/Squad1H-stella ruimte.png" alt="img"></div>
+                    <h2>Stella</h2>
+                    <span>Student Front-end development</span>
+                </li>
+                <li class="card">
+                    <div class="img"><img src="images/Squad1H-suleyman ruimte.jpg" alt="img"></div>
+                    <h2>Suleyman</h2>
+                    <span>Student Front-end development</span>
+                </li>
+                <li class="card">
+                    <div class="img"><img src="images/Squad1H-tessa ruimte.jpg" alt="img"></div>
+                    <h2>Tessa</h2>
+                    <span>Student Front-end development</span>
+                </li>
+                <li class="card">
+                    <div class="img"><img src="images/Squad1H-yamen ruimte.png" alt="img"></div>
+                    <h2>Yamen</h2>
                     <span>Student Front-end development</span>
                 </li>
             </ul>
