--- a/mikiyas.html
+++ b/mikiyas.html
@@ -4,41 +4,45 @@
         <title>Squadpage</title>
         <link rel="stylesheet" href="mikiyas.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
+    <script src="mikiyas.js" defer></script>
     </head>
     <body>
         <div class="wrapper">
+            <i id="left" class="fa-solid fa-angle-left"></i>
             <ul class="carousel">
                 <li class="card">
-                    <div class="img"><img src="images/Squad1H-Nikiyas.JPG" alt="img"></div>
+                    <div class="img"><img src="images/Squad1H-Nikiyas.JPG" alt="img" draggable="false"></div>
                     <h2>Mikiyas Hadis</h2>
                     <span>Student Front-end development</span>
                 </li>
                 <li class="card">
-                    <div class="img"><img src="images/Squad1H-Nikiyas.JPG" alt="img"></div>
+                    <div class="img"><img src="images/Squad1H-Nikiyas.JPG" alt="img" draggable="false"></div>
                     <h2>Mikiyas Hadis</h2>
                     <span>Student Front-end development</span>
                 </li>
                 <li class="card">
-                    <div class="img"><img src="images/Squad1H-Nikiyas.JPG" alt="img"></div>
+                    <div class="img"><img src="images/Squad1H-Nikiyas.JPG" alt="img" draggable="false"></div>
                     <h2>Mikiyas Hadis</h2>
                     <span>Student Front-end development</span>
                 </li>
                 <li class="card">
-                    <div class="img"><img src="images/Squad1H-Nikiyas.JPG" alt="img"></div>
+                    <div class="img"><img src="images/Squad1H-Nikiyas.JPG" alt="img" draggable="false"></div>
                     <h2>Mikiyas Hadis</h2>
                     <span>Student Front-end development</span>
                 </li>
                 <li class="card">
-                    <div class="img"><img src="images/Squad1H-Nikiyas.JPG" alt="img"></div>
+                    <div class="img"><img src="images/Squad1H-Nikiyas.JPG" alt="img" draggable="false"></div>
                     <h2>Mikiyas Hadis</h2>
                     <span>Student Front-end development</span>
                 </li>
                                 <li class="card">
-                    <div class="img"><img src="images/Squad1H-Nikiyas.JPG" alt="img"></div>
+                    <div class="img"><img src="images/Squad1H-Nikiyas.JPG" alt="img" draggable="false"></div>
                     <h2>Mikiyas Hadis</h2>
                     <span>Student Front-end development</span>
                 </li>
             </ul>
+            <i id="right" class="fa-solid fa-angle-right"></i>
         </div>
     </body>
 </html>
