Code waarde aangepast

--- a/mikiyas.html
+++ b/mikiyas.html
@@ -11,7 +11,8 @@
 
 <body>
     <div class="wrapper">
-        <i id="left" class="fa-solid fa-angle-left"></i>
+        <button id="left" class="fa-solid fa-angle-left"></button>
+        <button id="right" class="fa-solid fa-angle-right"></button>
         <ul class="carousel">
             <li class="card">
                 <div class="img"><img src="images/Squad1H-Nikiyas.JPG" alt="img" draggable="false"></div>
@@ -43,8 +44,7 @@
                 <h2>Mikiyas Hadis</h2>
                 <span>Student Front-end development</span>
             </li>
-        </ul>
-        <i id="right" class="fa-solid fa-angle-right"></i>
+        </ul>     
     </div>
 </body>
 
