--- a/mikiyas.html
+++ b/mikiyas.html
@@ -2,7 +2,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Squadpage</title>
+    <title>Squadpage 1H en Amstelcampus</title>
     <link rel="stylesheet" href="mikiyas.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
@@ -15,38 +15,39 @@
         <!-- <button id="left" class="fa-solid fa-angle-left"></button> -->
         <ul class="carousel">
             <li class="card">
-                <a href="https://mikiyas-hs.github.io/your-tribe-profile-card/" target="_blank">
-                <div class="img"><img src="images/Squad1H-Nikiyas ruimte.png" alt="img"></div>
-                <h2>Mikiyas</h2>
-                <span>Student Front-end development</span>
+                <a href="https://mikiyas-hs.github.io/your-tribe-profile-card/"> <!--link naar visitekaartje-->
+                    <div class="img"><img src="images/Squad1H-Nikiyas ruimte.png" alt="img"></div>
+                    <!--foto binnen carouselkaartje-->
+                    <h2>Mikiyas</h2> <!--naam persoon-->
+                    <span>Student Front-end development</span>
                 </a>
             </li>
             <li class="card">
                 <a href="https://anouarab2.github.io/your-tribe-profile-card/">
-                <div class="img"><img src="images/Squad1H-anouar ruimte.png" alt="img"></div>
-                <h2>Anouar</h2>
-                <span>Student Front-end development</span>
+                    <div class="img"><img src="images/Squad1H-anouar ruimte.png" alt="img"></div>
+                    <h2>Anouar</h2>
+                    <span>Student Front-end development</span>
                 </a>
             </li>
             <li class="card">
                 <a href="https://anoukderooij24.github.io/your-tribe-profile-card/">
-                <div class="img"><img src="images/Squad1H-anouk ruimte.png" alt="img"></div>
-                <h2>Anouk</h2>
-                <span>Student Front-end development</span>
+                    <div class="img"><img src="images/Squad1H-anouk ruimte.png" alt="img"></div>
+                    <h2>Anouk</h2>
+                    <span>Student Front-end development</span>
                 </a>
             </li>
             <li class="card">
                 <a href="https://poormoa00.github.io/your-tribe-profile-card/">
-                <div class="img"><img src="images/Squad1H-Aria ruimte.png" alt="img"></div>
-                <h2>Aria</h2>
-                <span>Student Front-end development</span>
+                    <div class="img"><img src="images/Squad1H-Aria ruimte.png" alt="img"></div>
+                    <h2>Aria</h2>
+                    <span>Student Front-end development</span>
                 </a>
             </li>
             <li class="card">
                 <a href="https://armanvd.github.io/your-tribe-profile-card/">
-                <div class="img"><img src="images/Squad1H-arman ruimte.png" alt="img"></div>
-                <h2>Arman</h2>
-                <span>Student Front-end development</span>
+                    <div class="img"><img src="images/Squad1H-arman ruimte.png" alt="img"></div>
+                    <h2>Arman</h2>
+                    <span>Student Front-end development</span>
                 </a>
             </li>
             <li class="card">
@@ -62,37 +63,37 @@
             </li>
             <li class="card">
                 <a href="https://kaiven7.github.io/your-tribe-profile-card/">
-                <div class="img"><img src="images/Squad1H-kai ruimte.png" alt="img"></div>
-                <h2>Kai</h2>
-                <span>Student Front-end development</span>
+                    <div class="img"><img src="images/Squad1H-kai ruimte.png" alt="img"></div>
+                    <h2>Kai</h2>
+                    <span>Student Front-end development</span>
                 </a>
             </li>
             <li class="card">
                 <a href="https://kitkatisvibing.github.io/your-tribe-profile-card/">
-                <div class="img"><img src="images/Squad1H-kate ruimte.png" alt="img"></div>
-                <h2>Kate</h2>
-                <span>Student Front-end development</span>
+                    <div class="img"><img src="images/Squad1H-kate ruimte.png" alt="img"></div>
+                    <h2>Kate</h2>
+                    <span>Student Front-end development</span>
                 </a>
             </li>
             <li class="card">
                 <a href="https://keremttc.github.io/your-tribe-profile-card/">
-                <div class="img"><img src="images/Squad1H-kerem ruimte.png" alt="img"></div>
-                <h2>Kerem</h2>
-                <span>Student Front-end development</span>
+                    <div class="img"><img src="images/Squad1H-kerem ruimte.png" alt="img"></div>
+                    <h2>Kerem</h2>
+                    <span>Student Front-end development</span>
                 </a>
             </li>
             <li class="card">
                 <a href="https://kyantg.github.io/your-tribe-profile-card/">
-                <div class="img"><img src="images/Squad1H-kyan ruimte.jpg" alt="img"></div>
-                <h2>Kyan</h2>
-                <span>Student Front-end development</span>
+                    <div class="img"><img src="images/Squad1H-kyan ruimte.jpg" alt="img"></div>
+                    <h2>Kyan</h2>
+                    <span>Student Front-end development</span>
                 </a>
             </li>
             <li class="card">
                 <a href="https://lutrian1.github.io/your-tribe-profile-card---Luuk/">
-                <div class="img"><img src="images/Squad1H-luuk ruimte.png" alt="img"></div>
-                <h2>Luuk</h2>
-                <span>Student Front-end development</span>
+                    <div class="img"><img src="images/Squad1H-luuk ruimte.png" alt="img"></div>
+                    <h2>Luuk</h2>
+                    <span>Student Front-end development</span>
                 </a>
             </li>
             <li class="card">
@@ -102,23 +103,23 @@
             </li>
             <li class="card">
                 <a href="https://miel775.github.io/your-tribe-profile-card/">
-                <div class="img"><img src="images/Squad1H-miel ruimte.jpg" alt="img"></div>
-                <h2>Miel</h2>
-                <span>Student Front-end development</span>
+                    <div class="img"><img src="images/Squad1H-miel ruimte.jpg" alt="img"></div>
+                    <h2>Miel</h2>
+                    <span>Student Front-end development</span>
                 </a>
             </li>
             <li class="card">
                 <a href="https://nawallox.github.io/your-tribe-profile-card/">
-                <div class="img"><img src="images/Squad1H-nawal ruimte.png" alt="img"></div>
-                <h2>Nawal</h2>
-                <span>Student Front-end development</span>
+                    <div class="img"><img src="images/Squad1H-nawal ruimte.png" alt="img"></div>
+                    <h2>Nawal</h2>
+                    <span>Student Front-end development</span>
                 </a>
             </li>
             <li class="card">
                 <a href="https://nayomekaia.github.io/your-tribe-profile-card/">
-                <div class="img"><img src="images/Squad1H-Nayome ruimte.png" alt="img"></div>
-                <h2>Nayome</h2>
-                <span>Student Front-end development</span>
+                    <div class="img"><img src="images/Squad1H-Nayome ruimte.png" alt="img"></div>
+                    <h2>Nayome</h2>
+                    <span>Student Front-end development</span>
                 </a>
             </li>
             <li class="card">
@@ -128,58 +129,58 @@
             </li>
             <li class="card">
                 <a href="https://renzowille.github.io/your-tribe-profile-card/index.html">
-                <div class="img"><img src="images/Squad1H-renzo ruimte.png" alt="img"></div>
-                <h2>Renzo</h2>
-                <span>Student Front-end development</span>
+                    <div class="img"><img src="images/Squad1H-renzo ruimte.png" alt="img"></div>
+                    <h2>Renzo</h2>
+                    <span>Student Front-end development</span>
                 </a>
             </li>
             <li class="card">
                 <a href="https://reyrey-https.github.io/your-tribe-profile-card/">
-                <div class="img"><img src="images/Squad1H-reyhan ruimte.png" alt="img"></div>
-                <h2>Reyhan</h2>
-                <span>Student Front-end development</span>
+                    <div class="img"><img src="images/Squad1H-reyhan ruimte.png" alt="img"></div>
+                    <h2>Reyhan</h2>
+                    <span>Student Front-end development</span>
                 </a>
             </li>
             <li class="card">
                 <a href="https://rickfdnd.github.io/your-tribe-profile-card/">
-                <div class="img"><img src="images/Squad1H-rick ruimte.png" alt="img"></div>
-                <h2>Rick</h2>
-                <span>Student Front-end development</span>
+                    <div class="img"><img src="images/Squad1H-rick ruimte.png" alt="img"></div>
+                    <h2>Rick</h2>
+                    <span>Student Front-end development</span>
                 </a>
             </li>
             <li class="card">
                 <a href="https://ryryesther.github.io/your-tribe-profile-card/">
-                <div class="img"><img src="images/Squad1H-riley ruimte.png" alt="img"></div>
-                <h2>Riley</h2>
-                <span>Student Front-end development</span>
+                    <div class="img"><img src="images/Squad1H-riley ruimte.png" alt="img"></div>
+                    <h2>Riley</h2>
+                    <span>Student Front-end development</span>
                 </a>
             </li>
             <li class="card">
                 <a href="https://safae-e.github.io/your-tribe-profile-card/">
-                <div class="img"><img src="images/Squad1H-safoe ruimte.png" alt="img"></div>
-                <h2>Safoe</h2>
-                <span>Student Front-end development</span>
+                    <div class="img"><img src="images/Squad1H-safoe ruimte.png" alt="img"></div>
+                    <h2>Safoe</h2>
+                    <span>Student Front-end development</span>
                 </a>
             </li>
             <li class="card">
                 <a href="https://sebastiaan-hva.github.io/your-tribe-profile-card/">
-                <div class="img"><img src="images/Squad1H-sebastiaan ruimte.png" alt="img"></div>
-                <h2>Sebastiaan</h2>
-                <span>Student Front-end development</span>
+                    <div class="img"><img src="images/Squad1H-sebastiaan ruimte.png" alt="img"></div>
+                    <h2>Sebastiaan</h2>
+                    <span>Student Front-end development</span>
                 </a>
             </li>
             <li class="card">
                 <a href="https://senneb31.github.io/your-tribe-profile-card/">
-                <div class="img"><img src="images/Squad1H-senne ruimte.jpg" alt="img"></div>
-                <h2>Senne</h2>
-                <span>Student Front-end development</span>
+                    <div class="img"><img src="images/Squad1H-senne ruimte.jpg" alt="img"></div>
+                    <h2>Senne</h2>
+                    <span>Student Front-end development</span>
                 </a>
             </li>
             <li class="card">
                 <a href="https://sidopjescherm.github.io/your-tribe-profile-card/">
-                <div class="img"><img src="images/Squad1H-sidney ruimte.png" alt="img"></div>
-                <h2>Sidney</h2>
-                <span>Student Front-end development</span>
+                    <div class="img"><img src="images/Squad1H-sidney ruimte.png" alt="img"></div>
+                    <h2>Sidney</h2>
+                    <span>Student Front-end development</span>
                 </a>
             </li>
             <li class="card">
@@ -189,42 +190,42 @@
             </li>
             <li class="card">
                 <a href="https://misspastelwitch.github.io/your-tribe-profile-card/">
-                <div class="img"><img src="images/Squad1H-stella ruimte.png" alt="img"></div>
-                <h2>Stella</h2>
-                <span>Student Front-end development</span>
+                    <div class="img"><img src="images/Squad1H-stella ruimte.png" alt="img"></div>
+                    <h2>Stella</h2>
+                    <span>Student Front-end development</span>
                 </a>
             </li>
             <li class="card">
                 <a href="https://suleymanhg.github.io/Visitekaart-FDND/">
-                <div class="img"><img src="images/Squad1H-suleyman ruimte.jpg" alt="img"></div>
-                <h2>Suleyman</h2>
-                <span>Student Front-end development</span>
+                    <div class="img"><img src="images/Squad1H-suleyman ruimte.jpg" alt="img"></div>
+                    <h2>Suleyman</h2>
+                    <span>Student Front-end development</span>
                 </a>
             </li>
             <li class="card">
                 <a href="https://tindyy.github.io/Profile-card/">
-                <div class="img"><img src="images/Squad1H-tessa ruimte.jpg" alt="img"></div>
-                <h2>Tessa</h2>
-                <span>Student Front-end development</span>
+                    <div class="img"><img src="images/Squad1H-tessa ruimte.jpg" alt="img"></div>
+                    <h2>Tessa</h2>
+                    <span>Student Front-end development</span>
                 </a>
             </li>
             <li class="card">
                 <a href="https://yamenal.github.io/your-tribe-profile-card/">
-                <div class="img"><img src="images/Squad1H-yamen ruimte.png" alt="img"></div>
-                <h2>Yamen</h2>
-                <span>Student Front-end development</span>
+                    <div class="img"><img src="images/Squad1H-yamen ruimte.png" alt="img"></div>
+                    <h2>Yamen</h2>
+                    <span>Student Front-end development</span>
                 </a>
             </li>
             <li class="card">
                 <a href="https://saschavanvliet.github.io/your-tribe-profile-card/">
-                <div class="img"><img src="assets/sacha ruimte.png" alt="img"></div>
-                <h2>Sascha</h2>
-                <span>Student Front-end development</span>
+                    <div class="img"><img src="assets/sacha ruimte.png" alt="img"></div>
+                    <h2>Sascha</h2>
+                    <span>Student Front-end development</span>
                 </a>
             </li>
         </ul>
         <!-- <button id="right" class="fa-solid fa-angle-right"></button> -->
-         <a href="index.html" id="button">Klik hier voor een tour in de campus</a>
+        <a href="index.html" id="button">Klik hier voor een tour in de campus</a>
     </div>
 </body>
 
