--- a/mikiyas.html
+++ b/mikiyas.html
@@ -162,6 +162,11 @@
                     <h2>Yamen</h2>
                     <span>Student Front-end development</span>
                     </li>
+                    <li class="card">
+                        <div class="img"><img src="images/sacha ruimte.png" alt="img"></div>
+                        <h2>Sascha</h2>
+                        <span>Student Front-end development</span>
+                        </li>
             </ul>
             <i id="right" class="fa-solid fa-angle-right"></i>
         </div>
