Link naar amstelcampus site + knop

--- a/mikiyas.html
+++ b/mikiyas.html
@@ -222,6 +222,7 @@
                         </li>
             </ul>
             <i id="right" class="fa-solid fa-angle-right"></i>
+            <a href="amstelcampus.html" id="button">Klik hier voor een tour in de campus</a>
         </div>
     </body>
 </html>
