--- a/mikiyas.html
+++ b/mikiyas.html
@@ -158,7 +158,7 @@
             <li class="card">
                 <a href="https://safae-e.github.io/your-tribe-profile-card/">
                     <div class="img"><img src="images/Squad1H-safoe ruimte.png" alt="img"></div>
-                    <h2>Safoe</h2>
+                    <h2>Safae</h2>
                     <span>Student Front-end development</span>
                 </a>
             </li>
